# KeyEG

./: .travis.yml  README.md  pyproject.toml
src/bstadlbauer/p300speller/: p300_speller.py
